--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "@eslint/eslintrc": "^3"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
