--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,7 @@ jobs:
           echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   merge:
+    needs: build
     runs-on: ubuntu-24.04
     permissions:
       packages: write
@@ -60,6 +61,7 @@ jobs:
           docker push ghcr.io/${GITHUB_REPOSITORY@L}:latest
 
   deploy:
+    needs: merge
     runs-on: ubuntu-24.04
     permissions:
       packages: write
