--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,6 +69,9 @@ jobs:
       - name: Install Nomad
         uses: hashicorp/setup-nomad@main
 
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Request deployment to Nomad
         env:
           NOMAD_ADDR: https://nomad.ayats.org
