--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,15 @@ jobs:
     permissions:
       packages: write
     steps:
-      - run: |
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge images
+        run: |
           docker pull ghcr.io/${GITHUB_REPOSITORY@L}:${{ github.sha }}-amd64
           docker pull ghcr.io/${GITHUB_REPOSITORY@L}:${{ github.sha }}-arm64
           docker manifest create ghcr.io/${GITHUB_REPOSITORY@L}:${{ github.sha }} \
